// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform ineligible record with hearing date in past into eligible criteria 1`] = `
Object {
  "eligibleCriteria": Object {
    "usMoInRestrictiveHousing": Object {
      "confinementType": "confinement type",
    },
    "usMoOverdueForHearing": Object {
      "nextReviewDate": 2023-10-02T00:00:00.000Z,
    },
  },
  "externalId": "004",
  "ineligibleCriteria": Object {},
  "metadata": Object {
    "bedNumber": "03",
    "buildingNumber": "13",
    "cdvsSinceLastHearing": Array [],
    "complexNumber": "2",
    "currentFacility": "FACILITY 01",
    "housingUseCode": "HOS",
    "majorCdvs": Array [
      Object {
        "cdvDate": 2022-02-20T00:00:00.000Z,
        "cdvRule": "Rule 7.2",
      },
    ],
    "mostRecentHearingComments": "Reason for Hearing: 30 day review",
    "mostRecentHearingDate": 2022-09-03T00:00:00.000Z,
    "mostRecentHearingFacility": "FACILITY NAME",
    "mostRecentHearingType": "hearing type",
    "numMinorCdvsBeforeLastHearing": 3,
    "restrictiveHousingStartDate": 2022-10-01T00:00:00.000Z,
    "roomNumber": "05",
  },
  "stateCode": "US_MO",
}
`;

exports[`transform record 1`] = `
Object {
  "eligibleCriteria": Object {
    "usMoInRestrictiveHousing": Object {
      "confinementType": "confinement type",
    },
  },
  "externalId": "004",
  "ineligibleCriteria": Object {
    "usMoOverdueForHearing": Object {
      "nextReviewDate": 2023-11-03T00:00:00.000Z,
    },
  },
  "metadata": Object {
    "bedNumber": "03",
    "buildingNumber": "13",
    "cdvsSinceLastHearing": Array [],
    "complexNumber": "2",
    "currentFacility": "FACILITY 01",
    "housingUseCode": "HOS",
    "majorCdvs": Array [
      Object {
        "cdvDate": 2022-02-20T00:00:00.000Z,
        "cdvRule": "Rule 7.2",
      },
    ],
    "mostRecentHearingComments": "Reason for Hearing: 30 day review",
    "mostRecentHearingDate": 2022-09-03T00:00:00.000Z,
    "mostRecentHearingFacility": "FACILITY NAME",
    "mostRecentHearingType": "hearing type",
    "numMinorCdvsBeforeLastHearing": 3,
    "restrictiveHousingStartDate": 2022-10-01T00:00:00.000Z,
    "roomNumber": "05",
  },
  "stateCode": "US_MO",
}
`;

exports[`transform record 2`] = `
Object {
  "eligibleCriteria": Object {
    "usMoInRestrictiveHousing": Object {
      "confinementType": "confinement type",
    },
    "usMoOverdueForHearing": Object {
      "nextReviewDate": 2023-10-03T00:00:00.000Z,
    },
  },
  "externalId": "004",
  "ineligibleCriteria": Object {},
  "metadata": Object {
    "bedNumber": "03",
    "buildingNumber": "13",
    "cdvsSinceLastHearing": Array [],
    "complexNumber": "2",
    "currentFacility": "FACILITY 01",
    "housingUseCode": "HOS",
    "majorCdvs": Array [
      Object {
        "cdvDate": 2022-02-20T00:00:00.000Z,
        "cdvRule": "Rule 7.2",
      },
    ],
    "mostRecentHearingComments": "Reason for Hearing: 30 day review",
    "mostRecentHearingDate": 2022-09-03T00:00:00.000Z,
    "mostRecentHearingFacility": "FACILITY NAME",
    "mostRecentHearingType": "hearing type",
    "numMinorCdvsBeforeLastHearing": 3,
    "restrictiveHousingStartDate": 2022-10-01T00:00:00.000Z,
    "roomNumber": "05",
  },
  "stateCode": "US_MO",
}
`;

exports[`transform record 3`] = `
Object {
  "eligibleCriteria": Object {
    "usMoInRestrictiveHousing": Object {
      "confinementType": "confinement type",
    },
  },
  "externalId": "004",
  "ineligibleCriteria": Object {
    "usMoOverdueForHearing": Object {
      "nextReviewDate": undefined,
    },
  },
  "metadata": Object {
    "bedNumber": "03",
    "buildingNumber": "13",
    "cdvsSinceLastHearing": Array [],
    "complexNumber": "2",
    "currentFacility": "FACILITY 01",
    "housingUseCode": "HOS",
    "majorCdvs": Array [
      Object {
        "cdvDate": 2022-02-20T00:00:00.000Z,
        "cdvRule": "Rule 7.2",
      },
    ],
    "mostRecentHearingComments": "Reason for Hearing: 30 day review",
    "mostRecentHearingDate": 2022-09-03T00:00:00.000Z,
    "mostRecentHearingFacility": "FACILITY NAME",
    "mostRecentHearingType": "hearing type",
    "numMinorCdvsBeforeLastHearing": 3,
    "restrictiveHousingStartDate": 2022-10-01T00:00:00.000Z,
    "roomNumber": "05",
  },
  "stateCode": "US_MO",
}
`;
